--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="4dp"
                 android:fontFamily="@font/storywell_handwriting"
                 android:background="@drawable/rounded_primary_button"
                 android:text="@string/about_setting"
@@ -75,29 +75,32 @@
                 android:id="@+id/button_sync"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:fontFamily="@font/storywell_handwriting"
                 android:background="@drawable/rounded_secondary_button"
                 android:text="@string/about_sync"
                 style="@style/AppTheme.ActionButton"/>
 
-            <TextView
-                android:id="@+id/textCopyrightHeading"
+            <Button
+                android:id="@+id/button_copyright"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/copyright"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:fontFamily="@font/storywell_handwriting"
-                android:textSize="18sp"
-                android:textAlignment="center"
-                style="@style/AppTheme.About.text" />
+                android:background="@drawable/rounded_secondary_button"
+                android:text="@string/about_copyright"
+                style="@style/AppTheme.ActionButton"/>
 
             <TextView
-                android:id="@+id/textCopyright"
+                android:id="@+id/text_copyright"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:visibility="gone"
                 android:fontFamily="@font/storywell_handwriting"
                 android:textSize="16sp"
                 android:text="@string/copyright_body"
