--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,5 +68,6 @@
     <color name="adultColorPrimary">#0097a7</color>
     <color name="childColorPrimary">#F50057</color>
     <color name="childColorPrimary2">#E65100</color>
+    <color name="storymap_dark">#FFF8E1</color>
 
 </resources>
