--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -91,5 +91,7 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="item_width">200dp</dimen>
+    <dimen name="mtrl_card_spacing">8dp</dimen>
+    <dimen name="storymap_viewer_peek_height">104dp</dimen>
 
 </resources>
