--- a/app/src/main/res/layout/layout_storymap_map.xml
+++ b/app/src/main/res/layout/layout_storymap_map.xml
@@ -6,8 +6,10 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_map">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
