--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -11,96 +11,131 @@
     app:behavior_peekHeight="@dimen/storymap_viewer_peek_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <TextView
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/overview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:fontFamily="@font/storywell_handwriting"
-        android:gravity="start"
-        android:text="Family Story"
-        android:textColor="@color/greyPrimaryDark"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        app:textAllCaps="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <ImageView
-        android:id="@+id/caregiver_avatar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_story_marker_large_high_match_highlight" />
-
-    <TextView
-        android:id="@+id/caregiver_username"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/storywell_handwriting"
-        android:gravity="bottom"
-        android:text="@string/storymap_viewer_username"
-        android:textColor="@android:color/black"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview" />
-
-    <LinearLayout
-        android:id="@+id/family_info"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/caregiver_username"
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/average_label"
+            android:id="@+id/overviewText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="0dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
-            android:text="Average "
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:text="Family Story - "
+            android:textColor="@color/greyPrimaryDark"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            app:textAllCaps="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/average_steps"
+            android:id="@+id/posted_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
-            android:text="4000"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:text="1 hours ago"
+            android:textColor="@color/greyPrimaryDark"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            app:textAllCaps="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/overviewText"/>
+
+        <ImageView
+            android:id="@+id/caregiver_avatar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_story_marker_large_high_match_highlight" />
 
         <TextView
-            android:id="@+id/average_steps_label"
+            android:id="@+id/caregiver_nickname"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/storywell_handwriting"
-            android:gravity="start"
-            android:text=" steps/day — "
+            android:gravity="bottom"
+            android:text="@string/storymap_viewer_username"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="21sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/overviewText" />
 
-        <TextView
-            android:id="@+id/neighborhood"
+        <LinearLayout
+            android:id="@+id/family_info"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/storywell_handwriting"
-            android:gravity="start"
-            android:text="Dorchester"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:layout_height="22dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/caregiver_nickname"
+            app:layout_constraintStart_toStartOf="parent">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/average_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/storywell_handwriting"
+                android:gravity="start"
+                android:text="Average "
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/average_steps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/storywell_handwriting"
+                android:gravity="start"
+                android:text="4000"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/steps_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/storywell_handwriting"
+                android:gravity="start"
+                android:text=" steps/day"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/dash1_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/storywell_handwriting"
+                android:gravity="start"
+                android:text=" — "
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/neighborhood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/storywell_handwriting"
+                android:gravity="start"
+                android:text="Dorchester"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <View
         android:id="@+id/divider1"
@@ -112,10 +147,10 @@
         android:background="@android:color/darker_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/family_info"/>
+        app:layout_constraintTop_toBottomOf="@+id/overview"/>
 
     <TextView
-        android:id="@+id/moreInfo"
+        android:id="@+id/user_bio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -142,7 +177,7 @@
         android:drawableLeft="@drawable/ic_round_play_arrow_big"
         android:text="Play Story"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/moreInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/user_bio" />
 
     <Button
         android:id="@+id/button_response"
