--- a/app/src/main/res/layout/layout_storymap_map.xml
+++ b/app/src/main/res/layout/layout_storymap_map.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_map">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment
         android:name="com.google.android.gms.maps.MapFragment"
         android:id="@+id/map"
         android:layout_width="match_parent"
