--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -8,7 +8,6 @@
     android:background="@color/storymap_dark"
     android:orientation="vertical"
     app:behavior_hideable="true"
-    app:behavior_peekHeight="@dimen/storymap_viewer_peek_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <android.support.constraint.ConstraintLayout
@@ -29,7 +28,7 @@
             android:text="Family Story - "
             android:textColor="@color/greyPrimaryDark"
             android:textStyle="bold"
-            android:textSize="14sp"
+            android:textSize="12sp"
             app:textAllCaps="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -45,15 +44,15 @@
             android:text="1 hours ago"
             android:textColor="@color/greyPrimaryDark"
             android:textStyle="bold"
-            android:textSize="14sp"
+            android:textSize="12sp"
             app:textAllCaps="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/overviewText"/>
 
         <ImageView
             android:id="@+id/caregiver_avatar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
             android:layout_margin="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
@@ -81,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="22dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/caregiver_nickname"
+            app:layout_constraintBottom_toBottomOf="@+id/caregiver_avatar"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
@@ -135,6 +134,20 @@
                 android:textSize="18sp" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/user_bio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="90dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/storywell_handwriting"
+            android:text="I'm a mother of two children. I'm about 25 years old. My hobby is reading novels."
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/family_info" />
+
     </android.support.constraint.ConstraintLayout>
 
     <View
@@ -144,55 +157,92 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:visibility="visible"
         android:background="@android:color/darker_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/overview"/>
 
-    <TextView
-        android:id="@+id/user_bio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/storywell_handwriting"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:text="I'm a mother of two children. I'm about 25 years old. My hobby is."
+    <ProgressBar
+        android:id="@+id/playbackProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/actionbar_progress_button_size"
+        android:layout_height="@dimen/actionbar_progress_button_size"
+        android:layout_margin="18dp"
+        android:alpha="1.0"
+        android:max="3600"
+        android:progress="60"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider1"/>
+        app:layout_constraintTop_toBottomOf="@+id/overview" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button_play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="16dp"
-        android:fontFamily="@font/storywell_handwriting"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:background="@drawable/rounded_primary_button"
-        android:drawableLeft="@drawable/ic_round_play_arrow_big"
-        android:text="Play Story"
+        android:layout_width="@dimen/actionbar_button_size"
+        android:layout_height="@dimen/actionbar_button_size"
+        android:layout_centerInParent="true"
+        android:layout_margin="32dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/round_button_hot"
+        android:elevation="10dp"
+        android:src="@drawable/ic_round_play_arrow_big"
+        android:tint="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_bio" />
+        app:layout_constraintTop_toBottomOf="@+id/overview"
+        android:contentDescription="Play button to hear the family story." />
 
     <Button
-        android:id="@+id/button_response"
+        android:id="@+id/button_respond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_gray_button"
+        android:fontFamily="@font/storywell_handwriting"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:fontFamily="@font/storywell_handwriting"
+        android:text="Respond"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:background="@drawable/rounded_gray_button"
-        android:text="Respond"
-        app:layout_constraintStart_toEndOf="@+id/button_play"
-        app:layout_constraintTop_toBottomOf="@+id/user_bio" />
+        app:layout_constraintTop_toTopOf="@+id/button_play"
+        app:layout_constraintBottom_toBottomOf="@+id/button_play"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_play" />
+    <!--
+        <Button
+            android:id="@+id/button_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="16dp"
+            android:fontFamily="@font/storywell_handwriting"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:background="@drawable/rounded_primary_button"
+            android:drawableLeft="@drawable/ic_round_play_arrow_big"
+            android:text="Play Story"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/user_bio" />
+
+        <ImageButton
+            android:id="@+id/buttonPlay"
+            android:layout_width="@dimen/actionbar_button_size"
+            android:layout_height="@dimen/actionbar_button_size"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_button_hot"
+            android:elevation="10dp"
+            android:src="@drawable/ic_round_play_arrow_big"
+            android:tint="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/caregiver_avatar" />
+            -->
 
     <View
         android:id="@+id/divider2"
@@ -205,22 +255,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_play"/>
-    <!--
-    <ImageButton
-        android:id="@+id/buttonPlay"
-        android:layout_width="@dimen/actionbar_button_size"
-        android:layout_height="@dimen/actionbar_button_size"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/round_button_hot"
-        android:elevation="10dp"
-        android:src="@drawable/ic_round_play_arrow_big"
-        android:tint="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/caregiver_avatar" />
-        -->
 
 </android.support.constraint.ConstraintLayout>
