--- a/app/src/main/res/layout/fragment_reflection.xml
+++ b/app/src/main/res/layout/fragment_reflection.xml
@@ -30,6 +30,11 @@
                 android:layout_marginRight="@dimen/story_art_big_margin"
                 android:layout_marginTop="@dimen/story_art_big_margin"
                 android:layout_weight="1"
+                android:fontFamily="@font/pangolin_regular"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textColor="@color/greyPrimaryDark"
                 android:text="@string/reflection_title"
                 android:theme="@style/AppTheme.ReflectionView.info" />
 
@@ -44,8 +49,7 @@
                 android:visibility="gone"
                 android:text="@string/reflection_date_info"
                 android:fontFamily="@font/storywell_handwriting"
-                android:textColor="@color/colorSecondaryDark"
-                android:theme="@style/AppTheme.ReflectionView.info" />
+                android:textColor="@color/colorSecondaryDark" />
 
             <TextView
                 android:id="@+id/reflectionText"
@@ -56,8 +60,11 @@
                 android:layout_marginRight="@dimen/story_text_margin"
                 android:layout_marginTop="@dimen/story_text_submargin"
                 android:layout_weight="1"
-                android:text="@string/reflection_text"
-                android:theme="@style/AppTheme.ReflectionView.text" />
+                android:fontFamily="@font/pangolin_regular"
+                android:textSize="38sp"
+                android:textStyle="normal"
+                android:textColor="@color/storyReflectionText"
+                android:text="@string/reflection_text" />
 
             <TextView
                 android:id="@+id/reflectionSubtext"
@@ -68,7 +75,10 @@
                 android:layout_marginRight="@dimen/story_art_big_margin"
                 android:layout_weight="1"
                 android:text=""
-                android:theme="@style/AppTheme.ReflectionView.subtext" />
+                android:fontFamily="@font/pangolin_regular"
+                android:textSize="22sp"
+                android:textStyle="normal"
+                android:textColor="@color/greyPrimaryDark" />
 
         </LinearLayout>
 
@@ -80,6 +90,7 @@
         android:layout_height="@dimen/actionbar_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:elevation="10dp"
         android:background="@color/colorPrimary">
 
         <android.support.constraint.ConstraintLayout
