--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -41,7 +41,7 @@
             android:layout_marginStart="0dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
-            android:text="1 hours ago"
+            android:text="2 hours ago"
             android:textColor="@color/greyPrimaryDark"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -131,7 +131,7 @@
                 android:gravity="start"
                 android:text="Dorchester"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -146,6 +146,15 @@
             android:text="I'm a mother of two children. I'm about 25 years old. My hobby is reading novels."
             android:textColor="@android:color/black"
             android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/family_info" />
+
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_edit_24px"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/caregiver_avatar"
+            app:layout_constraintStart_toStartOf="@+id/caregiver_avatar"
             app:layout_constraintTop_toBottomOf="@+id/family_info" />
 
     </android.support.constraint.ConstraintLayout>
@@ -206,6 +215,7 @@
         android:text="Respond"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintTop_toTopOf="@+id/button_play"
         app:layout_constraintBottom_toBottomOf="@+id/button_play"
         app:layout_constraintEnd_toEndOf="parent"
