--- a/app/src/main/res/layout/fragment_reflection.xml
+++ b/app/src/main/res/layout/fragment_reflection.xml
@@ -199,7 +199,7 @@
             </RelativeLayout>
 
             <Button
-                android:id="@+id/buttonNext"
+                android:id="@+id/button_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/actionbar_padding"
