--- a/app/src/main/res/layout/fragment_reflection_only_view.xml
+++ b/app/src/main/res/layout/fragment_reflection_only_view.xml
@@ -90,7 +90,7 @@
             android:textColor="@color/black"
             android:textSize="14sp" />
         <Button
-            android:id="@+id/buttonNext"
+            android:id="@+id/button_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/buttonPlay"
