Add minor fix to the GeoStory layouts

--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/no_margin"
@@ -197,6 +196,7 @@
             android:gravity="top">
 
             <include
+                android:id="@+id/fragment_storymap"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
