--- a/app/src/main/res/layout/layout_storymap_map.xml
+++ b/app/src/main/res/layout/layout_storymap_map.xml
@@ -7,7 +7,7 @@
     android:id="@+id/layout_map">
 
     <fragment
-        android:name="com.google.android.gms.maps.MapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
