--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -188,26 +188,38 @@
         </LinearLayout>
 
         <!-- Story Preview Screen -->
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/preview_screen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="top">
+            android:gravity="bottom">
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/storymap_viewer_sheet"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <include
-                android:id="@+id/fragment_storymap"
+                android:id="@+id/storymap_viewer_sheet"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                layout="@layout/fragment_storymap" />
+                android:layout_height="@dimen/storymap_viewer_expanded_height"
+                android:layout_marginBottom="@dimen/actionbar_size"
+                layout="@layout/layout_storymap_viewer"
+                android:elevation="30dp"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/sharing_controls"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/actionbar_size"
                 android:layout_gravity="center"
                 android:background="@color/colorPrimary"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -270,7 +282,7 @@
                 </LinearLayout>
 
             </android.support.constraint.ConstraintLayout>
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
     </ViewAnimator>
 
 
