--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -202,7 +202,7 @@
         android:contentDescription="Play button to hear the family story." />
 
     <Button
-        android:id="@+id/button_respond"
+        android:id="@+id/button_respond_story"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
