--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -83,35 +83,40 @@
             app:layout_constraintTop_toBottomOf="@+id/caregiver_nickname"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/average_label"
+            <LinearLayout
+                android:id="@+id/steps_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/storywell_handwriting"
-                android:gravity="start"
-                android:text="Average "
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/average_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/storywell_handwriting"
+                    android:gravity="start"
+                    android:text="Average "
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/average_steps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/storywell_handwriting"
-                android:gravity="start"
-                android:text="4000"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/average_steps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/storywell_handwriting"
+                    android:gravity="start"
+                    android:text="4000"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/steps_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/storywell_handwriting"
-                android:gravity="start"
-                android:text=" steps/day"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/steps_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/storywell_handwriting"
+                    android:gravity="start"
+                    android:text=" steps/day"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/dash1_label"
@@ -124,7 +129,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/neighborhood"
+                android:id="@+id/neighborhood_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/storywell_handwriting"
