--- a/app/src/main/res/layout/layout_mood_picker_child.xml
+++ b/app/src/main/res/layout/layout_mood_picker_child.xml
@@ -24,7 +24,7 @@
 
 
     <GridLayout
-        android:id="@+id/mood_picker_button_group"
+        android:id="@+id/child_mood_picker_button_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -40,6 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
+            android:layout_margin="4dp"
+            android:background="@drawable/toggle_button_moods"
             android:drawableTop="@drawable/ic_twemoji_happy"
             android:fontFamily="@font/storywell_handwriting"
             android:textOff="@string/child_mood_happy"
@@ -51,6 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
+            android:layout_margin="4dp"
+            android:background="@drawable/toggle_button_moods"
             android:drawableTop="@drawable/ic_twemoji_sad"
             android:fontFamily="@font/storywell_handwriting"
             android:textOff="@string/child_mood_sad"
@@ -62,6 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
+            android:layout_margin="4dp"
+            android:background="@drawable/toggle_button_moods"
             android:drawableTop="@drawable/ic_twemoji_laugh"
             android:fontFamily="@font/storywell_handwriting"
             android:textOff="@string/child_mood_laugh"
@@ -73,6 +79,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
+            android:layout_margin="4dp"
+            android:background="@drawable/toggle_button_moods"
             android:drawableTop="@drawable/ic_twemoji_angry"
             android:fontFamily="@font/storywell_handwriting"
             android:textOff="@string/child_mood_angry"
@@ -92,7 +100,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageButton
-            android:id="@+id/button_send_moods"
+            android:id="@+id/button_send_child_moods"
             android:layout_width="@dimen/actionbar_button_size"
             android:layout_height="@dimen/actionbar_button_size"
             android:layout_margin="14dp"
@@ -119,7 +127,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_send_moods" />
+            app:layout_constraintTop_toBottomOf="@+id/button_send_child_moods" />
 
 
     </android.support.constraint.ConstraintLayout>
