Finalize the feature to modify geostory icon using a full screen dialog

--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -247,7 +247,7 @@
                         android:background="@drawable/rounded_secondary_button"
                         android:drawableStart="@drawable/ic_edit_24px"
                         android:fontFamily="@font/storywell_handwriting"
-                        android:text="Edit Info"
+                        android:text="Edit Info &amp; Icon"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -262,7 +262,7 @@
                         android:background="@drawable/rounded_primary_button"
                         android:drawableEnd="@drawable/ic_send_24px"
                         android:fontFamily="@font/storywell_handwriting"
-                        android:text="Share Story"
+                        android:text="Share"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
