--- a/app/src/main/res/layout/item_geostory_icon_spinner.xml
+++ b/app/src/main/res/layout/item_geostory_icon_spinner.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -28,4 +29,5 @@
         android:fontFamily="@font/storywell_handwriting"
         app:layout_constraintStart_toEndOf="@+id/icon_src_geostory"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
